# cargue_archivo_mid_serverless

./: .gitignore  README.md  env.example.json  pyproject.toml  samconfig.toml  template.yaml
.github/workflows/: sam-deploy.yml
hello-world/: main.go
registrar_datos_archivo/: app.py  requirements.in  requirements.txt
registro-datos/: go.mod  main.go
